--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Agbalumo&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/icon/icon.png" type="image/x-icon">
+
     <script src="js/script.js"></script>
 </head>
 <body>
